fixed location and time not showing in model

--- a/css/style.css
+++ b/css/style.css
@@ -412,11 +412,17 @@ html {
   width: 30%;
   height: 100%;
   display: flex;
-  flex-flow: column wrap;
+  flex-flow: row wrap;
   padding: 0 3%;
   border-right: solid 1px #5CB8E2; }
 .c-modal__contact-img {
   width: 100%; }
+.c-modal__break {
+  flex-basis: 100%;
+  height: 0; }
+.c-modal__booking-text {
+  color: #00ABDD;
+  font-size: 1.7rem; }
 .c-modal__col-right {
   width: 70%;
   height: 100%;
@@ -461,6 +467,9 @@ html {
   color: #00ABDD;
   font-size: 1.8rem;
   padding-top: 2rem; }
+.c-modal__summary-ctn {
+  display: flex;
+  flex-flow: row wrap; }
 
 .l-sorting-ctn {
   width: 100%;
