--- a/sass/_modal.scss
+++ b/sass/_modal.scss
@@ -207,13 +207,21 @@
         width: 30%;
         height: 100%;
         display: flex;
-        flex-flow: column wrap;
+        flex-flow: row wrap;
         // background: salmon;
         padding: 0 3%;
         border-right: solid 1px #5CB8E2;
     }
     &__contact-img{
         width: 100%;
+    }
+    &__break{
+        flex-basis: 100%;
+        height: 0;
+    }
+    &__booking-text{
+        color: $primary-colour;
+        font-size: 1.7rem;
     }
     &__col-right{
         width: 70%;
@@ -275,6 +283,11 @@
         color: $primary-colour;
         font-size: 1.8rem;
         padding-top: 2rem;
+    }
+
+    &__summary-ctn{
+        display: flex;
+        flex-flow: row wrap;
     }
 
 }
